...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <com.ishabaev.weather.rxview.RxEditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/primary_text_margin"
            android:maxLines="1" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/city_search_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/editText">

        </android.support.v7.widget.RecyclerView>

...
